<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">王朝黄历</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name">未登录</string>
    <string name="empty_jishi">没有新的记事 赶紧来添加</string>
    <string name="empty_memorial">没有新的纪念日 赶紧来添加</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="day">日</string>
    <string name="Current_year">2015年</string>
    <string name="Current_mouth">11月</string>
    <string name="Current_week">周二</string>
    <string name="Sunday">日</string>
    <string name="Monday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="Saturday">六</string>
    <string name="cancelBtn">取消</string>
    <string name="okBtn">确定</string>
    <string name="empty_zhainan">没有网络，请检查网络后重试</string>
    <string name="empty_jiazai">小贱君拼命加载中，请稍后。。。</string>
    <string name="loading_now">加载中...</string>
     <string name="addnote_title">请输入标题(最多16个字)</string>
      <string name="addnote_content">请输入内容(最多1000个字)</string>
     <string name="sure">完成</string>
    <!-- 服务器相关 -->
    <string name="server_error">服务器异常</string>

</resources>